--- a/blog/templates/add_comment.html
+++ b/blog/templates/add_comment.html
@@ -1,1 +1,13 @@
-<h1>My comment Here</h1>
+{% extends 'base.html' %} {%block title %} Create a comment! {% endblock %} {% block content %}
+
+<h1>Add Comments...</h1>
+<br/>
+<br/>
+<div class="form-group">
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %} {{ form.as_p }}
+        <button class='btn btn-secondary'>Submit</button>
+</div>
+
+
+{% endblock %}
