--- a/blog/templates/delete_post.html
+++ b/blog/templates/delete_post.html
@@ -1,1 +1,19 @@
-<h1>Are you sure you wanna delete this?</h1>
+{% extends 'base.html' %} {%block title %} Delete blog post! {% endblock %} {% block content %} {% if user.is_authenticated %} {% if user.id == post.author.id %}
+<h1>Delete Post...</h1>
+<br/>
+<br/>
+<h3>Delete {{ post.title }} </h3>
+
+<br/>
+<div class="form-group">
+    <form method="POST">
+        {% csrf_token %}
+        <strong>Are you sure?!</strong><br/><br/>
+        <button class='btn btn-secondary'>Delete Post</button>
+</div>
+
+{% else %}
+<h3>You are not logged in</h3>
+{% endif %} {% else %}
+<h3>You are not logged in</h3>
+{% endif %} {% endblock %}
