--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,1 +1,20 @@
-<h1>This is the home page</h1>
+{% extends 'base.html' %} {% block content %}
+
+
+<h1 style="align-items: center;">This is 2021 POSTS</h1>
+
+<ul style="align-items: center;">
+    {% for post in posts %}
+    <li><a href="{% url 'article-detail' post.pk %}">{{post.title}}</a> - {{post.author.username}} - {{ post.post_date }} {% if user.is_authenticated %} {% if user.id == post.author.id %}
+        <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+        <a href="{% url 'delete_post' post.pk %}">(Delete)</a> {% endif %} {% endif %}
+
+    </li>
+    <!-- Add HTML editing in blog post -->
+
+    {% endfor %}
+</ul>
+
+
+
+{% endblock %}
