--- a/blog/templates/post_details.html
+++ b/blog/templates/post_details.html
@@ -1,1 +1,36 @@
-<h1>This is the detailed page</h1>
+{% extends 'base.html' %} {% load static %} {% block title %} {{ post.title_tag }} {% endblock %} {% block content %}
+
+
+<h1>{{ post.title }}</h1>
+<small>By: {{ post.author.username }}
+    - {{ post.post_date }}
+    {% if user.is_authenticated %}
+    {% if user.id == post.author.id %}
+    -<a href="{% url 'update_post' post.pk %}">(Edit)</a>
+    <a href="{% url 'delete_post' post.pk %}">(Delete)</a></small><br/> {% endif %} {% endif %}
+<hr>
+<br /> {% if post.header_image %}
+<img width="50%" src="{{ post.header_image.url }}"> {% endif %}
+
+<br /><br> {{ post.body|safe }}
+<hr>
+<br />
+<form action="{% url 'like_post' post.pk %}" method="POST">
+    {% csrf_token %} {% if user.is_authenticated %} {% if liked %}
+    <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-danger">unlike</button> {% else %}
+    <button type="submit" , name="post_id" , value="{{ post.id }}" , class="btn btn-primary">Like</button> {% endif %} {% else %}
+
+    <small><a href="{% url 'login' %} ">Login</a> to like</small> {% endif %} - {{total_likes}} Likes
+</form>
+
+<br>
+<br>
+<h2>Comments</h2>
+<br>
+
+<a href="{% url 'add_comment' post.pk %}">Add Comments</a>
+<br/><br/> {% if not post.comments.all %} No comment Yet... {% else %} {% for comment in post.comments.all %}
+<strong>{{comment.name}}-
+    {{comment.date_added}}</strong>
+<br/> {{comment.body}}
+<br/> {% endfor%} {% endif%} {% endblock %}
