--- a/blog/templates/update_post.html
+++ b/blog/templates/update_post.html
@@ -1,1 +1,16 @@
-<h1>Update your post here</h1>
+{% extends 'base.html' %} {%block title %} Edit blog post! {% endblock %} {% block content %} {% if user.is_authenticated %} {% if user.id == post.author.id %}
+<h1>Update Post...</h1>
+<br/>
+<br/>
+<div class="form-group">
+    <form method="POST">
+        {% csrf_token %} {{ form.media }} {{ form.as_p }}
+        <button class='btn btn-secondary'>Update</button>
+</div>
+
+{% else %}
+<h3>You are not logged in</h3>
+{% endif %} {% else %}
+<h3>You are not logged in</h3>
+
+{% endif %} {% endblock %}
